--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lucide-react": "^0.516.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.2",
     "zod": "^3.25.67"
