--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.22.0",
+    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.60",
     "@radix-ui/react-slot": "^1.2.3",
     "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +23,7 @@
     "motion": "^12.18.1",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
