--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.22.0",
+    "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.60",
     "@radix-ui/react-slot": "^1.2.3",
