--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.60",
+    "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
