--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.516.0",
