--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.516.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
